--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 # Apify SDK and Crawlee
-apify<4.0.0
-crawlee[beautifulsoup,playwright]
+apify~=2.0.0
+crawlee[beautifulsoup,playwright]~=0.4.2
 
 # Content extraction and processing
 beautifulsoup4>=4.12.0
