fix: update to crawlee 0.7.1+, restore modern imports, and add browserforge download to dockerfile

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
 # Apify SDK and Crawlee
-apify~=2.0.0
-crawlee[beautifulsoup,playwright]~=0.4.2
-pydantic<2.0.0
+apify>=1.8.0
+crawlee[beautifulsoup,playwright]>=0.7.1
 
 # Content extraction and processing
 beautifulsoup4>=4.12.0
