--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 # Apify SDK and Crawlee
-apify>=1.8.0
-crawlee[beautifulsoup,playwright]>=0.7.1
+apify==2.0.1
+crawlee[beautifulsoup,playwright]==1.3.1
 
 # Content extraction and processing
 beautifulsoup4>=4.12.0
