fix: correct Docker base image to apify/actor-python-playwright:3.11

--- a/.actor/Dockerfile
+++ b/.actor/Dockerfile
@@ -1,7 +1,7 @@
 # First, specify the base Docker image.
 # You can see the Docker images from Apify at https://hub.docker.com/r/apify/.
 # You can also use any other image from Docker Hub.
-FROM apify/actor-python-playwright-chrome:3.11
+FROM apify/actor-python-playwright:3.11
 
 # Set the Playwright browsers path
 ENV PLAYWRIGHT_BROWSERS_PATH=/root/.cache/ms-playwright
@@ -18,8 +18,8 @@ RUN echo "Python version:" \
  && pip --version \
  && echo "Installing dependencies:" \
  && pip install -r requirements.txt \
- && echo "Installing Playwright Chromium:" \
- && playwright install chromium \
+ && echo "Installing Playwright Chromium with dependencies:" \
+ && playwright install --with-deps chromium \
  && echo "Updating browserforge data:" \
  && (python -m browserforge update || true) \
  && echo "All installed Python packages:" \
